# sandbox

./: .zuul.yaml  CODEOWNERS  README.rst  galaxy.yml  setup.cfg  test-requirements.txt  test.txt  tox.ini
containers/python-base/: Dockerfile
containers/python-builder/: Dockerfile
doc/source/: conf.py  index.rst
meta/: main.yml
playbooks/: child.yaml  pre.yaml  run.yaml
playbooks/awx-tox-base/: pre.yaml
playbooks/dco/: run.yaml
playbooks/roles/download-ansible-collections/tasks/: main.yaml
playbooks/sandbox-nxos-test/: run.yaml
plugins/action/: foobar.py
releasenotes/notes/: hello-fd8a3c148ac33cd7.yaml  next-step-16a661e3707da22b.yaml
releasenotes/source/: conf.py  index.rst
tests/playbooks/: pre.yaml  run.yaml
