[metadata]
name = sandbox
summary = Ansible network sandbox role
description-file =
    README.rst
author = Ansible Network Contributors
home-page = https://ansible.com/
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True
